--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     
-    <section class="container bg-black text-white">
+     <section class="container bg-black text-white">
         <div class="container my-3 ">
 <nav class="navbar navbar-expand-lg  my-2 px-5">
   <div class="container-fluid">
@@ -44,7 +44,7 @@
     </div>
   </div>
 </nav>
-<div class="hero d-flex mx-5 my-5  text-white">
+<div class="hero mx-5 my-5  text-white">
     <div class="container px-5 ">
         <div class="image">
    <img src="images/iPhone 12 Pro.png" alt="image" id="iphone">
@@ -58,8 +58,8 @@
 <p>The honest dating app that puts YOU in control! <br> We encourage users to be honest to form a real, <br> trustworthy, and transparent connection. </p>
 <br>
 <div class="icons d-flex">
-<img src="images/Badge.png" alt="image">
-<img src="images/Badge (1).png" alt="image" class="mx-3">
+<img src="images/Badge.png" alt="image" class="the">
+<img src="images/Badge (1).png" alt="image" class="on mx-3">
 </div>
 </div>
 </div>
@@ -67,15 +67,15 @@
 <div class="container ">
     <div class="row rounded py-3 px-5">
     <div class="col-4">
-       <h1>10,000,000</h1>
+       <h1 class="bg-pink">10,000,000</h1>
         <p>Users <br>Worldwide</p>
 </div>
 <div class="col-4">
-       <h1>13,000</h1>
+       <h1 class="bg-pink">13,000</h1>
         <p>Dates and Hookups <br>everyday</p>
 </div>
 <div class="col-4">
-       <h1>136</h1>
+       <h1 class="bg-pink">136</h1>
         <p>Cities where you can find a lover in life and in bed</p>
 </div>
 </div>
@@ -86,7 +86,8 @@
     <center>
         <h1 class="bg-pink">What DOWN is All About</h1>
     </center>
-    <div class="cards d-flex px-5 my-2">
+    
+<div class="cards d-flex px-5 my-2 mx-2">
   <div class="card1 mx-2 ">
     <br>
     <img src="images/ooui_link-secure.png" alt="">
@@ -122,7 +123,7 @@
 <center><h1 class="bg-pink">Why You Need to Get DOWN</h1></center>
 <br><br> 
 <div class="row1 d-flex">
-  <div class="col-6">
+  <div class="rowleft col-6">
     <img src="images/Frame 94.png" alt="">
   </div>
   <div class=" left col-5 my-5 mx-5 px-5">
@@ -132,20 +133,20 @@
  </div>
 <br><br>
  <div class="row2 d-flex">
-  <div class="col-4 my-5 mx-2 px-5">
+  <div class=" lefts col-4 my-5 mx-2 px-5">
     <h2>Chat Around the World</h2>
     <p>Chat and date internationally with Snap Match - a random  chat matchmaking system that connects you with someone online.</p>
     </div>
-  <div class=" col-8">
+  <div class="rowlefts col-8">
         <img src="images/Frame 39.png" alt="">
   </div>
  </div>
    <br><br>
  <div class="row3 d-flex">
-  <div class="col-4">
+  <div class="right col-4">
     <img src="images/Group 75.png" alt="">
   </div>
-  <div class="col-8 my-5 mx-5 px-5">
+  <div class="rowright col-8 my-5 mx-5 px-5">
     <h2>incredible chat experience</h2>
     <br>
     <button>Ice breakers</button>
@@ -158,9 +159,9 @@
 </div>
 
 <div class=" my-5 mx-5  ">
-<div class="row rounded py-3">
+<div class="rows rounded py-3">
   <div class="col-3 my-5 mx-2">
-<h1 class="bg-pink ">What Real DOWN Users Say About The App
+<h1 class="bg-pink ">What Real DOWN Users Say About The App</h1>
   </div>
   <div class="real col-8">
     <img src="images/Frame 79.png" alt="">
@@ -176,7 +177,9 @@
   </div>
 </center>
 <br>
+ 
 
     </section>
 </body>
+
 </html>
